# ownrs

./: CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/superpowers/plans/: 2026-03-18-admin-teams-impl.md  2026-04-15-org-table-ux-overhaul.md
docs/superpowers/specs/: 2026-03-10-admin-teams-design.md  2026-04-15-org-table-ux-overhaul.md  criteria-admin-teams.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/cache/: file_cache.rs
src/github/: client.rs  members.rs  mod.rs  repo_teams.rs  repos.rs  teams.rs
src/output/: csv.rs  json.rs  table.rs
src/reconcile/: alignment.rs  types.rs
src/sources/: catalog.rs  codeowners.rs  fetcher.rs  mod.rs
src/suggest/: mod.rs  types.rs
tests/: bdd.rs  fixtures.rs
tests/features/: default_table.feature  format_names.feature  sorting.feature  summary.feature  truncation.feature  wide.feature
tests/fixtures/default_table/: content_testorg_alpha-repo_catalog.json  content_testorg_alpha-repo_codeowners.json  content_testorg_beta-service_catalog.json  repos_testorg.json
tests/fixtures/format_names/: repos_testorg.json  teams_testorg.json
tests/fixtures/sorting/: content_testorg_alpha-repo_codeowners.json  content_testorg_charlie-svc_catalog.json  content_testorg_charlie-svc_codeowners.json  repos_testorg.json  teams_testorg.json
tests/fixtures/truncation/: content_testorg_alpha-repo_codeowners.json  repos_testorg.json  teams_testorg.json
tests/fixtures/wide/: admin_teams_testorg_alpha-repo.json  (+1 more)
