[package]
name = "ownrs"
version = "0.1.0"
edition = "2021"
description = "Three-way ownership reconciliation across GitHub CODEOWNERS, Backstage catalog-info.yaml, and GitHub Teams"
license = "MIT"
repository = "https://github.com/raiderrobert/ownrs"
keywords = ["codeowners", "backstage", "github", "ownership", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
