[package]
name = "ownrs"
version = "0.1.0"
edition = "2021"
description = "Three-way ownership reconciliation across GitHub CODEOWNERS, Backstage catalog-info.yaml, and GitHub Teams"
license = "LicenseRef-PolyForm-Shield-1.0.0"
repository = "https://github.com/raiderrobert/ownrs"
keywords = ["codeowners", "backstage", "github", "ownership", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
octocrab = "0.44"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
csv = "1"
directories = "6"
anyhow = "1"
indicatif = "0.17"
